# percolator-meta

./: Cargo.toml  README.md  SECURITY_LOG.md
distribution/: Cargo.toml
distribution/src/: lib.rs
distribution/tests/: distribution.rs
genesis-vote/src/: lib.rs
genesis-vote/tests/: seal.rs
governance/src/: lib.rs
program/src/: lib.rs
program/tests/: integration.rs  squads_handover.rs
residual-distributor/: Cargo.toml  DESIGN.md
residual-distributor/src/: lib.rs
residual-distributor/tests/: e2e.rs  offsets.rs
setup/: Cargo.toml
setup/src/: lib.rs
setup/tests/: setup.rs
sim/: Cargo.toml
sim/src/: lib.rs
sim/tests/: farm.rs
subledger/: Cargo.toml
subledger/src/: lib.rs
subledger/tests/: insurance_percolator.rs  subledger.rs
twap/: Cargo.toml
twap-program/: Cargo.toml
twap-program/src/: lib.rs
twap-program/tests/: chain.rs
twap/src/: defaults.rs  lib.rs  math.rs  percolator_v16.rs  surplus.rs  twap_program.rs
twap/tests/: twap.rs
