[workspace]
members = ["governance", "program", "subledger", "distribution", "twap", "twap-program", "genesis-vote", "setup"]
resolver = "2"

[workspace.dependencies]
solana-program = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
solana-sdk = "1.18"
litesvm = "0.1"
percolator-prog = { git = "file:///home/anatoly/percolator-prog", rev = "c05057844867afbfbcf7dc1d3e8f163e2b76469c", features = ["no-entrypoint"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
overflow-checks = true
