# NOTE: developed on branch `risidual_genesis_never_push_upstream` — do NOT push upstream.
# Deterministic, points-based COIN distribution decider: a drop-in alternative to
# `genesis-vote` behind the `distribution` program's pluggable-decider seam.
[package]
name = "residual-distributor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "residual_distributor"
path = "src/lib.rs"

[features]
no-entrypoint = []

[dependencies]
solana-program = { workspace = true }
spl-token = { workspace = true }

[dev-dependencies]
solana-sdk = { workspace = true }
litesvm = { workspace = true }
spl-token = { version = "4.0", features = ["no-entrypoint"] }
distribution-program = { path = "../distribution", features = ["no-entrypoint"] }
subledger-program = { path = "../subledger", features = ["no-entrypoint"] }
percolator-prog = { workspace = true }
